<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/postMetaContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/postProfileImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/postAuthorMetaContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/postProfileImage"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/postProfileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/post_profile_name"
                android:textColor="@color/black"
                android:textSize="8pt"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/postProfileCreatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/post_created_at_placeholder"
                android:textColor="@color/gray"
                android:textSize="6pt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/postProfileName" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/postBodyText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="4dp"
            android:text="@string/post_body_placeholder"
            app:layout_constraintStart_toEndOf="@+id/postProfileImage"
            app:layout_constraintTop_toBottomOf="@+id/postAuthorMetaContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/postImageContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postMetaContainer">

        <ImageView
            android:id="@+id/postImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/interactionsContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postImageContainer">

        <Switch
            android:id="@+id/postLikeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="@string/empty_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/postLikeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/profile_subscribers_count_placeholder"
            android:textColor="@color/black"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/postLikeSwitch"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/postLikeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/post_likes_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/postLikeCount"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/postCommentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/postLikeText"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/comment_icon" />

        <TextView
            android:id="@+id/postCommentCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/post_comments_count_placeholder"
            android:textColor="@color/black"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/postCommentButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/postCommentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/post_comments_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/postCommentCount"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>