<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/profileName"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/profile_name_placeholder"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <TextView
        android:id="@+id/profileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/profile_username_placeholder"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/indicatorsContainer"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@id/profileUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileUsername">

        <TextView
            android:id="@+id/profileSubscribersCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:text="@string/profile_subscribers_count_placeholder"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profileSubscribersText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:text="@string/profile_subscribers_text"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/profileSubscribersCount"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profileSubscriptionsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:text="@string/profile_subscribers_count_placeholder"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/profileSubscribersText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profileSubscriptionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:text="@string/profile_subscriptions_text"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/profileSubscriptionsCount"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profilePostsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:text="@string/profile_subscribers_count_placeholder"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/profileSubscriptionsText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profilePostsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:text="@string/profile_posts_text"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/profilePostsCount"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicatorsContainer">

        <Button
            android:id="@+id/subscribeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/profile_subscribe_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/directMessageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/profile_direct_message_text"
            app:layout_constraintStart_toEndOf="@+id/subscribeButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonContainer" />


</androidx.constraintlayout.widget.ConstraintLayout>